# md-sticky

./: .gitignore  PLOT.md  README.md  install.sh  package-lock.json  package.json
scripts/: bootstrap-macos.sh  install-macos.sh  package-macos.sh  update.command
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  groups.rs  lib.rs  main.rs  menu.rs  pinned_windows.rs  save_load.rs  timers.rs  updater.rs  windows.rs
src/lib/: Editor.svelte  Icon.svelte  ShortcutsHelp.svelte  Timer.svelte  Version.svelte  editorExtensions.ts
src/routes/: +page.svelte  app.css
tests/: editor-backspace.test.ts  editor-list-conversion.test.ts
